--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -7,10 +7,18 @@
     margin-bottom: 1.5rem !important;
 }
 .u-margin-bottom-medium{
-    margin-bottom: 14rem !important;
+    margin-bottom: 4rem !important;
+
+    @include respond(tab-port) {
+        margin-bottom: 3rem !important;
+    }
 }
 .u-margin-bottom-big{
     margin-bottom: 8rem !important;
+
+    @include respond(tab-port) {
+        margin-bottom: 5rem !important;
+    }
 }
 .u-margin-bottom-huge{
     margin-bottom: 10rem !important;
