--- a/sass/base/_bases.scss
+++ b/sass/base/_bases.scss
@@ -9,10 +9,23 @@
 html{
     //this defines 1rem;
     font-size: 62.5%;   //1rem=10px; 10px/16px=62.5%
+
+    @include respond(tab-land) { // width < 1200?
+        font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+    }
+
+    @include respond(tab-port) { // width < 900?
+        font-size: 50%; //1 rem = 8px, 8/16 = 50%
+    }
+    
+    @include respond(big-desktop) {
+        font-size: 75%; //1rem = 12, 12/16
+    }
 }
 
 body{
     box-sizing: border-box;
+    padding-top: 5.7rem;
     overflow-x: hidden;
     overflow-y: scroll;
 }
