--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -24,6 +24,11 @@ body{
         animation-iteration-count: 3; 
         */
         animation-timing-function: ease-out;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
     }
 
     &--sub{
@@ -32,6 +37,10 @@ body{
         font-weight: 700;
         letter-spacing: .7rem;
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -46,6 +55,14 @@ body{
     letter-spacing: .2rem;
     transition: all .2s;
 
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
+
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
         text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
@@ -59,10 +76,9 @@ body{
 }
 
 .paragraph {
-    font-size: 1rem;
-    text-align: center;
+    font-size: $default-font-size;
 
     &:not(:last-child) {
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
     }
 }
