--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,12 +1,19 @@
 .header{
-    height: 90vh;
+    height: 88vh;
     background-position: top;
     background-size: cover;
     position: relative;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    background-image: linear-gradient(105deg, rgba($color-white, 0.8)0%, rgba($color-white,0.8)50%, transparent 50%), url(../img/helenalopes.jpg);
+    background-image: linear-gradient(105deg, rgba($color-white, 0.8)0%, 
+                                    rgba($color-white,0.8)50%, transparent 50%), 
+                                    url(../img/helenalopes.jpg);
 
+    @include respond(phone){
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
+    
     &__overlay-box{
         position: absolute;
         top: 0rem;
@@ -14,12 +21,16 @@
     }
 
     &__overlay{
-        height: 3.5rem;
+        height: 30rem;
+
+        @include respond(tab-port){
+            height: 25rem;
+        }
     }
 
     &__text-box{
         position: absolute;
-        top: 40%;
+        top: 45%;
         left: 30%;
         transform: translate(-45%,-50%);
         text-align: center;
