--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,7 +7,7 @@
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     background-image: linear-gradient(105deg, rgba($color-white, 0.8)0%, 
                                     rgba($color-white,0.8)50%, transparent 50%), 
-                                    url(../img/helenalopes.jpg);
+                                    url(../img/doctor.jpg);
 
     @include respond(phone){
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
