--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,8 @@
 @import "components/form";
 @import "components/popup";
 @import "components/scrollbar";
+@import "components/dropdown";
+@import "components/story";
 
 @import "layout/footer";
 @import "layout/grid";
