--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,20 @@ body {
 .u-margin-top-huge {
   margin-top: 10rem !important; }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .15;
+  overflow: hidden; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -386,6 +400,52 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #28b485; }
 
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 3px;
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: 1.6rem;
+  transform: skewX(-12deg); }
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg);
+    position: relative; }
+  .story__img {
+    height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
+    transition: all .5s; }
+  .story__text {
+    transform: skewX(12deg); }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all .5s;
+    backface-visibility: hidden; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    transform: scale(1) translateX(-4rem);
+    filter: blur(3px) brightness(80%); }
+
 .footer {
   background-color: #333;
   padding: 10rem 0;
@@ -546,8 +606,8 @@ body {
 
 .section-about {
   background-color: #eee;
-  padding: 20rem 0;
-  margin-top: -15vh; }
+  padding: 25rem 0;
+  margin-top: -22vh; }
   @media only screen and (max-width: 56.25em) {
     .section-about {
       padding: 15rem 0; } }
@@ -558,6 +618,22 @@ body {
   @media only screen and (max-width: 56.25em) {
     .section-book {
       padding: 10rem 0; } }
+
+.section-dropdown {
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/helenalopes.jpg);
+  background-size: cover;
+  padding: 30rem 0;
+  margin-top: -18rem;
+  clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%); }
+  .section-dropdown > * {
+    transform: skewY(5deg); }
+
+.section__stories {
+  position: relative;
+  padding: 15rem 0; }
+  @media only screen and (max-width: 56.25em) {
+    .section__stories {
+      padding: 20rem 0 10rem 0; } }
 
 .book {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/helenalopes.jpg);
