--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -29,3 +29,16 @@
         transform: translateX(0rem);
     }
 }
+
+@keyframes aaa {
+  0%{
+    left: -110%;
+    top: 90%;
+  }50%{
+    left: 10%;
+    top: -30%;
+  }100%{
+    top: -10%;
+    left: -10%;
+  }
+}
