--- a/css/profile.css
+++ b/css/profile.css
@@ -1,25 +1,3 @@
-/* *,
-::before,
-::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  font-size: 62.5%; }
-body {
-  box-sizing: border-box;
-  padding-top: 5.7rem;
-  overflow-x: hidden;
-  overflow-y: scroll; }
-
-body {
-  font-family: "Lato" , sans-serif;
-  font-weight: 480;
-  /*font-size: 16px;*/
-  line-height: 1.7;
-  color: #55c57a; } */
-
 *{
 	box-sizing: border-box;
 
@@ -27,24 +5,46 @@ body {
 body{
 	font-family: 'Nunito', sans-serif;
 	color: #384047
+	margin:0;
+	padding: 0;
 	
+	background-image: url(img/pic.jpg);
+	background-size: cover;
+}
+
+.container
+{
+	background-image: url(prof.jpg);
+    background-size: cover;
+    
+
 }
 form{
 	max-width: 300px;
 	margin: 10px auto;
 	padding: 10px 20px;
 	background-color: #f4f7f8;
-	border-radius: 8px;
+	border-radius: 20px;
+	z-index: 1;
+	margin-top: 5px;
+	font-size: 20px;
+	
+	
+	
+
 }
 h1{
 	margin: 0 0 30px 0;
 	text-align:center;
+	font-size: 50px;
+	font-weight: 200;
+
 }
 input[type="text"],
 input[type="email"],
 input[type="password"],
 input[type="Phone"],
-
+input[type="date"],
 textarea,
 select{
 	background-color: rgba(225,225,225,0.1);
@@ -59,6 +59,7 @@ select{
 	color: #8a97a0;
 	box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
 	margin-bottom: 30px;
+	opacity: 1;
 
 }
 
@@ -68,17 +69,21 @@ input:focus, textarea:focus{
 }
 
 input[type="radio"]{
-	margin: 0 4px 8px 0; 
+	margin: 0 4px 8px 0;
+	opacity: 1; 
 }
 
 fieldset{
 	margin-bottom: 30px;
 	border:none;
+	opacity: 1;
+	border-radius: 20px;
 }
 
 legend{
 	display: block;
 	margin-bottom: 8px;
+	opacity: 1;
 }
 
 label.light{
@@ -113,7 +118,7 @@ button{
 	border: 1px solid #3ac163;
 	border-width: 1px 1px 3px;
 	box-shadow: 0 -1px o rgba(255,255,255,0.1) inset;
-	margin-bottom: 10px;
+	margin-bottom: 10px;s
 
 
 }
@@ -128,8 +133,68 @@ input[type="submit"]{
 
 }
 
+   
+
+
+
 @media screen and (min-width: 480px){
 	form{
 		max-width: 480px;
 	}
 }
+
+/*.v-header{
+	height: 100vh;
+	 display: flex;
+	 align-items: center;
+	 
+
+}
+
+.container{
+	max-width: 960px;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	margin: auto;
+	text-align: center;
+}
+
+.fullscreen-video-wrap{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+
+}
+
+.fullscreen-video-wrap video{
+	min-width: 100%;
+	min-height: 100%
+}
+
+.header-overlay{
+	height: 100vh;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vh;
+	background-color: #225470;
+	z-index: 1;
+	opacity: 0.55;
+
+}
+*/
+
+
+
+
+
+
+
+
+
+
+
+
