--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -17,7 +17,7 @@
     }
 }
 
-.section-dropdown{
+.section-booking{
     background-image: linear-gradient(to right bottom ,
                         rgba($color-primary-light, 0.8),
                         rgba($color-primary-dark, 0.8)),
