--- a/css/profile.css
+++ b/css/profile.css
@@ -1,200 +1,21 @@
-*{
-	box-sizing: border-box;
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
 
-}
-body{
-	font-family: 'Nunito', sans-serif;
-	color: #384047
-	margin:0;
-	padding: 0;
-	
-	background-image: url(img/pic.jpg);
-	background-size: cover;
-}
+html {
+  font-size: 62.5%; }
+body {
+  box-sizing: border-box;
+  padding-top: 5.7rem;
+  overflow-x: hidden;
+  overflow-y: scroll; }
 
-.container
-{
-	background-image: url(prof.jpg);
-    background-size: cover;
-    
-
-}
-form{
-	max-width: 300px;
-	margin: 10px auto;
-	padding: 10px 20px;
-	background-color: #f4f7f8;
-	border-radius: 20px;
-	z-index: 1;
-	margin-top: 5px;
-	font-size: 20px;
-	
-	
-	
-
-}
-h1{
-	margin: 0 0 30px 0;
-	text-align:center;
-	font-size: 50px;
-	font-weight: 200;
-
-}
-input[type="text"],
-input[type="email"],
-input[type="password"],
-input[type="Phone"],
-input[type="date"],
-textarea,
-select{
-	background-color: rgba(225,225,225,0.1);
-	border:none;
-	font-size: 16px;
-	height: auto;
-	margin: 0;
-	outline: 0;
-	padding: 15px;
-	width: 100%;
-	background-color: #e8eeef;
-	color: #8a97a0;
-	box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-	margin-bottom: 30px;
-	opacity: 1;
-
-}
-
-input:focus, textarea:focus{
-	box-shadow: 0 0 5px rgba(81,203,238,1);
-	border: 1px solid rgba(81,203,238,1);
-}
-
-input[type="radio"]{
-	margin: 0 4px 8px 0;
-	opacity: 1; 
-}
-
-fieldset{
-	margin-bottom: 30px;
-	border:none;
-	opacity: 1;
-	border-radius: 20px;
-}
-
-legend{
-	display: block;
-	margin-bottom: 8px;
-	opacity: 1;
-}
-
-label.light{
-	font-weight: 300;
-	display: inline;
-}
-
-.section{
-	background-color: #5fcf80;
-	color: #fff;
-	height: 30px;
-	width:30px;
-	display: inline-block;
-	font-size: 0.8em;
-	margin-right: 4px;
-	line-height: 30px;
-	text-align: center;
-	text-shadow: 0 1px 0 rgba(255,255,255,0.2);
-	border-radius: 100%;
-
-}
-
-button{
-	padding: 19px 39px 18px 39px;
-	color: #FFF;
-	background-color: #4bc970;
-	font-size: 18px;
-	text-align: center;
-	font-style: normal;
-	border-radius: 5px;
-	width: 100%;
-	border: 1px solid #3ac163;
-	border-width: 1px 1px 3px;
-	box-shadow: 0 -1px o rgba(255,255,255,0.1) inset;
-	margin-bottom: 10px;s
-
-
-}
-input[type="submit"]{
-	color: #FFF;
-	text-align: center;
-	font-style: normal;
-	border-radius: 5px;
-	background-color: #4bc970;
-	padding: 5px 10px 5px 10px;
-
-
-}
-
-   
-
-
-
-@media screen and (min-width: 480px){
-	form{
-		max-width: 480px;
-	}
-}
-
-/*.v-header{
-	height: 100vh;
-	 display: flex;
-	 align-items: center;
-	 
-
-}
-
-.container{
-	max-width: 960px;
-	padding-left: 1rem;
-	padding-right: 1rem;
-	margin: auto;
-	text-align: center;
-}
-
-.fullscreen-video-wrap{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-	overflow: hidden;
-
-}
-
-.fullscreen-video-wrap video{
-	min-width: 100%;
-	min-height: 100%
-}
-
-.header-overlay{
-	height: 100vh;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100vh;
-	background-color: #225470;
-	z-index: 1;
-	opacity: 0.55;
-
-}
-*/
-
-
-
-
-
-
-
-
-
-
-
-
+body {
+  font-family: "Lato" , sans-serif;
+  font-weight: 480;
+  /*font-size: 16px;*/
+  line-height: 1.7;
+  color: #55c57a; }
