--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -31,6 +31,7 @@
     text-transform: uppercase;
     text-decoration: none;
     color: $color-white;
+    margin-left: 2rem;
   }
 
   &__items-right{
