--- a/css/profile.css
+++ b/css/profile.css
@@ -4,20 +4,12 @@
 }
 body{
 	font-family: 'Nunito', sans-serif;
-	color: #384047
+	color: #384047;
 	margin:0;
 	padding: 0;
 	
 	background-image: url(img/prof.jpg);
 	background-size: cover;
-}
-
-.container
-{
-	background-image: url(pic.jpg);
-    background-size: cover;
-    
-
 }
 form{
 	max-width: 300px;
@@ -140,50 +132,6 @@ input[type="submit"]:hover{
 		max-width: 480px;
 	}
 }
-
-/*.v-header{
-	height: 100vh;
-	 display: flex;
-	 align-items: center;
-	 
-
-}
-
-.container{
-	max-width: 960px;
-	padding-left: 1rem;
-	padding-right: 1rem;
-	margin: auto;
-	text-align: center;
-}
-
-.fullscreen-video-wrap{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-	overflow: hidden;
-
-}
-
-.fullscreen-video-wrap video{
-	min-width: 100%;
-	min-height: 100%
-}
-
-.header-overlay{
-	height: 100vh;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100vh;
-	background-color: #225470;
-	z-index: 1;
-	opacity: 0.55;
-
-}
-*/
 
 
 
