--- a/css/profile.css
+++ b/css/profile.css
@@ -133,6 +133,28 @@ input[type="submit"]:hover{
 	}
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 0.7rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px $color-primary; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:#7ed56f; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #6cad61; 
+}
+
 
 
 
