--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ body {
   text-decoration: none;
   font-weight: 700;
   color: #fff;
-  margin-top: -15rem;
+  margin-top: -10rem;
   transition: all .2s; }
   .heading-secondary-two:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
@@ -269,6 +269,13 @@ body {
   color: #fff; }
   .btn--green::after {
     background-color: #55c57a; }
+
+.btn--blue {
+  background-color: #a5a8ff;
+  color: #fff; 
+width}
+  .btn--blue::after {
+    background-color: #a5a8ff;}
 
 .btn::after {
   content: "";
@@ -684,6 +691,7 @@ body {
   padding: 1.5rem;
   text-decoration: none;
   transition: all .4s; }
+  transition: all .4s; }
 
 #navbar a:hover {
   border-radius: 3px;
@@ -725,8 +733,9 @@ body {
 .section-booking {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/booking_image.jpg);
   background-size: cover;
-  padding: 30rem 0;
-  margin-top: -18rem;
+  padding: 25rem 0;
+    padding-bottom: 10rem;
+  margin-top: -12rem;
   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%); }
 
@@ -747,6 +756,7 @@ body {
     width: 50%;
     padding: 6rem; }
 
+/*
 .collapsible {
   background-color: #2998ff;
   color: #fff;
@@ -787,23 +797,29 @@ body {
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   background-color: #fff; }
+*/
 
-.feedbackk {
-  background-color : #55c57a;
-/*    background-image: url(img/chat.png);*/
-  color: white;
-  padding: 5px 10px;
-  border-radius: 30px;
-  border-color: #55c57a;
-    outline: none;
+.booking__form{
+  text-transform: uppercase;
+  margin-left: 65%;
+  width: 100%;
+
 }
-.feedbackk:hover{
-    cursor: pointer;
-} 
+#btn-big{
+  width: 50%;
+  margin-left: 20%;
+  margin-right: 50%;
+  background-color:#3b0cf7; 
+  border:none;
+}
+.booking__form #s2{
+  margin-bottom: 2rem;
+  margin-top: 2rem;
 
-#mybuttonn {
-  position: fixed;
-  bottom: 20px;
-  right: 10px;
-    
+}
+#s1,#s2,#s3,#s4,#s5,#s6,#s7,#s8{
+  text-transform: uppercase;
+    outline: none;
+  opacity: 0.9;
+
 }
