--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ body {
   text-decoration: none;
   font-weight: 700;
   color: #fff;
-  margin-top: -10rem;
+  margin-top: -15rem;
   transition: all .2s; }
   .heading-secondary-two:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
@@ -269,13 +269,6 @@ body {
   color: #fff; }
   .btn--green::after {
     background-color: #55c57a; }
-
-.btn--blue {
-  background-color: #a5a8ff;
-  color: #fff; 
-width}
-  .btn--blue::after {
-    background-color: #a5a8ff;}
 
 .btn::after {
   content: "";
@@ -691,7 +684,6 @@ width}
   padding: 1.5rem;
   text-decoration: none;
   transition: all .4s; }
-  transition: all .4s; }
 
 #navbar a:hover {
   border-radius: 3px;
@@ -699,8 +691,7 @@ width}
   color: #fff;
   transform: translateY(1rem) scale(1.2);
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.3);
-  margin-left: 2%;
-}
+ margin-left: 2%;}
 
 .navbar__items {
   font-size: 1.6rem;
@@ -733,9 +724,8 @@ width}
 .section-booking {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/booking_image.jpg);
   background-size: cover;
-  padding: 25rem 0;
-    padding-bottom: 10rem;
-  margin-top: -12rem;
+  padding: 30rem 0;
+  margin-top: -18rem;
   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%); }
 
@@ -756,7 +746,6 @@ width}
     width: 50%;
     padding: 6rem; }
 
-/*
 .collapsible {
   background-color: #2998ff;
   color: #fff;
@@ -797,29 +786,35 @@ width}
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   background-color: #fff; }
-*/
-
-.booking__form{
-  text-transform: uppercase;
-  margin-left: 65%;
-  width: 100%;
-
-}
-#btn-big{
-  width: 50%;
-  margin-left: 20%;
-  margin-right: 50%;
-  background-color:#3b0cf7; 
-  border:none;
-}
-.booking__form #s2{
-  margin-bottom: 2rem;
-  margin-top: 2rem;
-
-}
-#s1,#s2,#s3,#s4,#s5,#s6,#s7,#s8{
-  text-transform: uppercase;
+.feedbackk {
+  background-color : #55c57a;
+/*    background-image: url(img/chat.png);*/
+  color: white;
+  padding: 5px 10px;
+  border-radius: 30px;
+  border-color: #55c57a;
     outline: none;
-  opacity: 0.9;
-
 }
+.feedbackk:hover{
+    cursor: pointer;
+} 
+
+#mybuttonn {
+  position: fixed;
+  bottom: 20px;
+  right: 10px;
+    
+}
+
+/*
+.sz{
+    width: 10px;
+    height: 10px;
+}
+*/
+/*
+#mybutton
+{
+    background-color: #c5cfd0;
+}
+*/
